package pt.ipp.isep.dei.esoft.project.domain;

public class RequestDto {

    private String propertyAttributes;

    private Integer id;

    public String getPropertyAttributes(){
        return propertyAttributes;
    }

    public int getRequestId(){
        return id;
    }

}
